unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Postal_Code__c</fullName>
        <description>Manufacturer postal code ouside USA.</description>
        <label>D3 - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>