unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D3_Zip_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D3_Zip_Code__c</fullName>
        <description>Manufacturer zip code within USA.</description>
        <label>D3 - Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>