unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Catalog_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Catalog_No__c</fullName>
        <description>Exact number as it appears in the manufacturer's catalog, device labeling, or accompanying packaging.</description>
        <label>D4 - Catalog No</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>