unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Expiration_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Expiration_Date__c</fullName>
        <description>Labeled device expiration date.</description>
        <label>D4 - Expiration Date</label>
        <type>Date</type>
    </CustomField>