unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Expiration_Date_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Expiration_Date_Null__c</fullName>
        <description>Used if the expiration date is not being provided in the report or no expiration date exists.</description>
        <label>D4 - Expiration Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>