unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Lot_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Lot_No__c</fullName>
        <description>Device lot number which can be found on device label or accompanying packaging.</description>
        <label>D4 - Lot No</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>