unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Model_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Model_No__c</fullName>
        <description>Exact model number found on the device label or accompanying packaging.</description>
        <label>D4 - Model No</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>