unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Other_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Other_No__c</fullName>
        <description>Any other device identification number.</description>
        <label>D4 - Other #</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>