unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D4_Serial_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D4_Serial_No__c</fullName>
        <description>Number assigned by the manufacturer specific to individual device which can be found on the device label or accompanying packaging.</description>
        <label>D4 - Serial No</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>