unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D5_Operator_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D5_Operator_of_Device__c</fullName>
        <description>Type of person operating/using the device on the patient at the time of the event.</description>
        <label>D5 - Operator of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Audiologist</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineer</fullName>
                </value>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Device Unattended</fullName>
                </value>
                <value>
                    <fullName>Dietician</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Technician</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Home Health Aide</fullName>
                </value>
                <value>
                    <fullName>Hospital Service Technician</fullName>
                </value>
                <value>
                    <fullName>Lay User/Patient</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Medical Equip Company Techn/Rep</fullName>
                </value>
                <value>
                    <fullName>Medical Technologist</fullName>
                </value>
                <value>
                    <fullName>Nuclear Medicine Technologist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nursing Assistant</fullName>
                </value>
                <value>
                    <fullName>Occupational Therapist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Caregivers</fullName>
                </value>
                <value>
                    <fullName>Other Health Care Professional</fullName>
                </value>
                <value>
                    <fullName>Paramedic</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Patient Family Member/Friend</fullName>
                </value>
                <value>
                    <fullName>Personal Care Assistant</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Phlebotomist</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>