unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D5_Other_operator_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D5_Other_operator_of_Device__c</fullName>
        <description>To be completed if "Other" is selected.</description>
        <label>D5 - Other operator of Device</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>