unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D6_Implant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D6_Implant_Date__c</fullName>
        <description>Date of implantation of the device.</description>
        <label>D6 - Implant Date</label>
        <type>Date</type>
    </CustomField>