unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D7_Explant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D7_Explant_Date__c</fullName>
        <description>Date of explantation of the device.</description>
        <label>D7 - Explant Date</label>
        <type>Date</type>
    </CustomField>