unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D7_Explant_Date_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D7_Explant_Date_Null__c</fullName>
        <description>Used if the Explant Date is not being provided in the report or the device is not implantable.</description>
        <label>D7 - Explant Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>