unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D8_Single_Use_Device_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D8_Single_Use_Device_Null__c</fullName>
        <description>Used if the device is not labeled for single-use only and was not reprocessed and reused on a patient.</description>
        <label>D8 - Single Use Device Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>