unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_Address2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_Address2__c</fullName>
        <description>Reprocessor address line 2.</description>
        <label>D9 - Address 2</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>