unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_City__c</fullName>
        <description>Reprocessor city.</description>
        <label>D9 - City</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>