unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_E_mail__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_E_mail__c</fullName>
        <description>Reprocessor e-mail.</description>
        <label>D9 - E-mail</label>
        <type>Email</type>
    </CustomField>