unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_Fax_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_Fax_Number__c</fullName>
        <description>Reprocessor fax number.</description>
        <label>D9 - Fax Number</label>
        <type>Phone</type>
    </CustomField>