unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_Name__c</fullName>
        <description>Reprocessor name.</description>
        <label>D9 - Name</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>