unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D9_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D9_Postal_Code__c</fullName>
        <description>Reprocessor postal code outside USA.</description>
        <label>D9 - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>