unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Address_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Address_1__c</fullName>
        <description>Initial reporter's address line 1.</description>
        <label>E1 - Address 1</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>