unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_City__c</fullName>
        <description>Initial reporter's city.</description>
        <label>E1 - City</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>