unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_E_Mail_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_E_Mail_Null__c</fullName>
        <description>Used if the initial reporter's e-mail is not being provided in the report.</description>
        <label>E1 - E-Mail Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>