unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Email__c</fullName>
        <description>Initial reporter's e-mail.</description>
        <label>E1 - Email</label>
        <type>Email</type>
    </CustomField>