unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Facility_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Facility_Name__c</fullName>
        <description>Initial reporter's facility name.</description>
        <label>E1 - Facility Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>