unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Fax__c</fullName>
        <description>Initial reporter's fax number.</description>
        <label>E1 - Fax Number</label>
        <type>Phone</type>
    </CustomField>