unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_First_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_First_Name__c</fullName>
        <description>Initial reporter's first name.</description>
        <label>E1 - First Name</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>