unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Last_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Last_Name__c</fullName>
        <description>Initial reporter's last name</description>
        <label>E1 - Last Name</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>