unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Name__c</fullName>
        <description>Initial reporter's full name.</description>
        <formula>CMPL123CME__E1_First_Name__c &amp;''&amp; CMPL123CME__E1_Middle_Name__c &amp;''&amp;  CMPL123CME__E1_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E1 - Full Name</label>
        <type>Text</type>
    </CustomField>