unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Phone__c</fullName>
        <description>Initial reporter's phone number.</description>
        <label>E1 - Phone</label>
        <type>Phone</type>
    </CustomField>