unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Postal_Code__c</fullName>
        <description>Initial reporter's postal code ouside USA.</description>
        <label>E1 - Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>