unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Region_State__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Region_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial reporter's state within USA.</description>
        <label>E1 - Region State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>STATE CODE</value>
            </filterItems>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search/Select State Code only</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EMDR (E1 - Region State)</relationshipLabel>
        <relationshipName>EMDR7</relationshipName>
        <type>Lookup</type>
    </CustomField>