unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Title__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Title__c</fullName>
        <description>Initial reporter's title.</description>
        <label>E1 - Title</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>