unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Zip_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Zip_Code__c</fullName>
        <description>Initial reporter's zip code within USA.</description>
        <label>E1 - Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>