unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E1_Zip_Code_Ext__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E1_Zip_Code_Ext__c</fullName>
        <description>Initial reporter's zip code extension within USA.</description>
        <label>E1 - Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>