unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E3_Occupation_Other__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E3_Occupation_Other__c</fullName>
        <description>Used if "Other" is selected for Occupation.</description>
        <label>E3 - Other Occupation</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>