unpackaged/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__E4_Initial_Report_sent_to_FDA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__E4_Initial_Report_sent_to_FDA__c</fullName>
        <description>Indicates whether the initial reporter also reported the event to FDA.</description>
        <label>E4 - Initial Report sent to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>